# YourIrrationalFriend

./: .env.example  README.md  main.py  pyproject.toml
bot/: ai.py  tg_bot.py  utils.py
