[tool.poetry]
name = "yourirrationalfriend"
package-mode = false
version = "0.0.0"
description = "Bring the ability to setup a full roleplay experience in your telegram group chats."
authors = ["Anton Potapov <fgreyeducation@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version="20.1", extras=["rate-limiter"]}
openai = "^1.40.0"
tiktoken = "^0.7.0"
python-decouple = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
